Adding select thread to mysql